@@ -1,4 +1,6 @@
 Version 1.11.17+dev:
+ * Add-ons server:
+   * Fixed attempt to access freed memory in [request_campaign_list] handler.
  * Language and i18n:
    * Updated translations: Lithuanian
 
